--- a/src/components/ArchiveSection.astro
+++ b/src/components/ArchiveSection.astro
@@ -7,6 +7,6 @@
         <text x="14" y="21" text-anchor="middle" font-size="20" font-family="sans-serif" fill="#FFFFFF"> 🔒 </text>
       </svg>
     </span>
-    <span class="text-slate-100"> This post is archived. It's content is no longer accurate or relevant. </span>
+    <span class="text-slate-100">This post is archived. Its content is no longer accurate or relevant.</span>
   </aside>
 </div>
