fix: hero breakpoints on mobile

--- a/src/components/homepage/HeroSection.astro
+++ b/src/components/homepage/HeroSection.astro
@@ -11,8 +11,8 @@ import SectionDivider from "src/components/ui/SectionDivider.astro";
   <div class="relative z-10 -mt-[10vh] flex flex-col items-center px-4 sm:px-6 md:-mt-[15vh] lg:px-8">
     <h1 class="mb-6 text-center text-6xl font-bold text-white md:text-8xl">
       <span class="md:inline">Hi, I'm</span>
-      <span class="mt-2 block md:mt-0 md:inline"
-        ><span class="inline-flex min-w-[240px] md:min-w-[340px]">
+      <span class="mt-2 block lg:mt-0 lg:inline"
+        ><span class="inline-flex min-w-[240px] lg:min-w-[340px]">
           <span id="typewriter-container" class="relative">
             <span id="typewriter" class="text-blue-400">Ben Limmer</span><span
               id="cursor"
